[V1] Integrasi API ke halaman Detail My Book
